# host-mgmt

./: .gitignore  .gitreview  README.md  conf.json  groups  hosts.py  logger.py  main.py  project.config  requirements.txt  servicemgmt.py  setup.cfg  setup.py
etc/: hosts_conf.json  hosts_conf.yaml  hosts_conf.yaml.sample
eventool/: ha_manage.py  hosts.py  logger.py  main.py  pcs.py  servicemgmt.py  ssh_cmds.py  sshutils.py  version.py
eventool/parsers/: __init__.py  hosts_parser.py  parser_core.py
eventool/tools/: viplist2conf.py
