[metadata]
name = eventool
# TODO(yfried): handle version with git tags
version = 0.0.2
summary = Event injection tool for HA testing
description-file =
    README.md
author = yfried
author-email = yfried@redhat.com
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Environment :: OpenStack
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python

[files]
packages =
    eventool

[entry_points]
console_scripts =
    eventool = eventool.main:main

[global]
setup-hooks =
    pbr.hooks.setup_hook
